--- a/EMA.Rmd
+++ b/EMA.Rmd
@@ -231,14 +231,14 @@ Table: (\#tab:emareviews) A selection of reviews of EMA studies targeting variou
 
 This manual comprises six parts, in which various aspects of EMA research will be discussed. 
 
-- In **part I**, Chapter \@ref(rstudio) introduces R, the statistical program that is an indispensable tool for the EMA researcher.
+- Chapter \@ref(rstudio), the second chapter of part I, introduces R, the statistical program that is an indispensable tool for the EMA researcher.
 
 - **Part II** focuses on EMA study design (Chapter \@ref(methods), EMA instruments (Chapter \@ref(instruments)) and EMA data management (Chapter \@ref(datamanagement)).
 
 - **Part III** details the momentary assessment of two specific outcomes: Mood (Chapter \@ref(mood)) and Activity (Chapter \@ref(activity)).
 
-- **Part IV** introduces EMA data analysis techniques: Feature Extraction (Chapter \@ref(features)), Mixed Modelling (Chapter \@ref(lmm)), and Network Analysis (Chapter \@ref(networks)).
+- **Part IV** introduces EMA data analysis techniques: Feature Extraction (Chapter \@ref(features)), and Mixed Modelling (Chapter \@ref(lmm)).
 
-- In **part V**, the application of the preceding material is illustrated in two case studies: a study into the use EMA to detect early warnings signs of depression (Chapter \@ref(csd)), and a study into a new GPS-based measure of activity (Chapter \@ref(homerange)).
+- In **part V**, the application of the preceding material is illustrated in a case study, in which EMA is used to detect early warnings signs of depression (Chapter \@ref(csd)).
 
 - **Part VI** provides three catalogues of EMA resources. Chapter \@ref(catalogue) lists EMA research groups within APH, chapter \@ref(ema-instruments-catalogue) lists EMA instruments that were found to be in use among APH researchers, and Chapter \@ref(rcat) summarizes useful R extensions (packages) for EMA data analysis.
