--- a/instruments_catalogue.Rmd
+++ b/instruments_catalogue.Rmd
@@ -17,8 +17,7 @@ Table: (\#tab:14a) EMA Instruments.
 | RoQua        | RoQua             | SMS / Browser-based active EMA|
 | **Wearables**|                   |                               |
 | GENEActive   | activinsights     | Wrist-worn accelerometer      |
-| VU-AMS       | VU                | Wearable for autonomic nervous|
-|              |                   | system assessments            |
+| VU-AMS       | VU                | Wearable for autonomic nervous system assessments|
 
 
 ## EMA Platforms & Apps
@@ -29,19 +28,22 @@ Table: (\#tab:14a) EMA Instruments.
 Ilumivu (<https://ilumivu.com/>) is an American commercial company specialised
 in mobile EMA application development. It offers a cross-platform (Android and
 IOS) smartphone app (mEMA) that researchers can use to collect data from study
-participants. Researchers can define the assessment plan of their study in an
+participants. 
+
+Researchers can define the assessment plan of their study in an
 online back-office. The Ilumivu EMA toolbox library includes a rather complete
 set of survey elements, survey logic branching tools, and survey scheduling
 options. Passive EMA options include GPS tagging (of survey responses),
 Geo-fencing (triggering surveys at specific locations) and smartphone sensor
 logging (light and noise level, screen brightness, screen locked/unlocked,
 humidity, ambient temperature, barometric pressure, phone/SMS activity log, and
-basic device information). a limited number of smart watch devices can
-optionally be linked to the Ilumivu app for further passive data collection.
-With the online back-office, researchers can invite participants, monitor study
-compliance and download data (in common data formats such as CSV). The company
-is open for custom development, when studies require features that are not
-included in the default app. Current (July 2018) subscription plans range
+basic device information). With the online back-office, researchers can invite
+participants, monitor study compliance and download data (in common data formats
+such as CSV). 
+
+A limited number of smart watch devices can optionally be linked to the Ilumivu app for further passive data collection. The company is open for custom development, when studies require features that are not included in the default app. 
+
+Current (July 2018) subscription plans range
 from 3.375 dollar (basic features) to 12.000 dollar (all features), per year.
 Researchers, who are interested in purchasing a license of the service, are
 advised to consult the 'Grant Writer's Guide' of Ilumivu (at
@@ -51,7 +53,7 @@ product on the market. Being an American company, researchers should also
 consider EU regulations relating to personal data privacy protection, since
 regulations are stricter when personal data of EU citizens leave the EU.
 
-```{r ilumivu, echo = FALSE, fig.cap = "Ilumivu App Screenshots", out.width = '20%', fig.align = 'center', fig.show = 'hold', fig.pos = "!h"}
+```{r ilumivu, echo = FALSE, fig.cap = "Ilumivu App Screenshots", out.width = '30%', fig.align = 'center', fig.show = 'hold', fig.pos = "!t"}
 knitr::include_graphics(c(
    "images/instruments/ilumivu/iv-app-1.png",
    "images/instruments/ilumivu/iv-app-2.png",
@@ -67,24 +69,28 @@ Moodbuster (<http://moodbuster.eu/>) is a web-based treatment platform with an
 integrated EMA app. The platform was developed by an international non-profit
 research consortium, including VU, VUmc and GGZ inGeest, in two major EU-funded
 research projects: ICT4Depression (see ICT4Depression.eu; @warmerdam2012) and
-E-COMPARED (see <http://e-compared.eu>; @Kleiboer2016; @VandeVen2017). In the
-E-COMPARED trial, Moodbuster was used, in five EU-countries, to test blended
+E-COMPARED (see <http://e-compared.eu>; @Kleiboer2016; @VandeVen2017). 
+
+In the E-COMPARED trial, Moodbuster was used, in five EU-countries, to test blended
 treatment of major depression. In this study, participants used the smartphone
 app to rate mood and various other depression-related variables, in the context
-of their treatment, over a period of up to 20 weeks. E-COMPARED EMA data were
-used in several predictive machine learning studies [@mikus2018; @rocha2018].
-In addition, the EMA app was used in a satellite study designed to assess the
-effects of long-term EMA [@VanBallegooijen2016]. Moodbuster will also be used
-in the EU ImpleMentAll project (<http://www.implementall.eu>) and in several
-other clinical trials that are in preparation. Currently, EMA assessment
-protocols are hard-coded in the Moodbuster app. New EMA assessments protocols
-can be implemented in collaboration with the Moodbuster development team. An
-online back-office is in development. Previous studies used an Android version
-of the EMA app. Cross-platform versions of the app in development. More
-information on Moodbuster can be obtained from prof. dr. Heleen Riper
+of their treatment, over a period of up to 20 weeks. 
+
+E-COMPARED EMA data were used in several predictive machine learning studies
+[@mikus2018; @rocha2018]. In addition, the EMA app was used in a satellite
+study designed to assess the effects of long-term EMA [@VanBallegooijen2016].
+Moodbuster will also be used in the EU ImpleMentAll project
+(<http://www.implementall.eu>) and in several other clinical trials that are in
+preparation. Currently, EMA assessment protocols are hard-coded in the
+Moodbuster app. New EMA assessments protocols can be implemented in
+collaboration with the Moodbuster development team. An online back-office is in
+development. Previous studies used an Android version of the EMA app.
+Cross-platform versions of the app in development.
+
+More information on Moodbuster can be obtained from prof. dr. Heleen Riper
 (<h.riper@vu.nl>).
 
-```{r moodbuster, echo = FALSE, fig.cap = "MoodBuster App Screenshots", out.width='20%', fig.align = 'center', fig.show = 'hold', fig.pos = "!h"}
+```{r moodbuster, echo = FALSE, fig.cap = "MoodBuster App Screenshots", out.width='25%', fig.align = 'center', fig.show = 'hold', fig.pos = "!t"}
 knitr::include_graphics(c(
    "images/instruments/moodbuster/mb-app-home.png",
    "images/instruments/moodbuster/mb-app-mood.png",
@@ -104,23 +110,25 @@ for active EMA research. The app can optionally be configured for smartphone
 logging (e.g., to log music that a study participant listens this). The wearable
 sensor can also be linked to the app, so that EMA questionnaires can be
 triggered based on targeted activity or energy expenditure patterns, such as
-extended periods of sedentary behavior. Specialized software to import,
-pre-process and analyze raw sensor data is available for download. Like Ilumivu,
-researchers can define EMA sample schedules for their study in a web-based
-back-office (<https://xs.movisens.com>), using an online graphical editor. Once
-defined, participants can be invited to the study , through the back-office, to
-download the freely available Movisens App from Google Play store. The
-back-office also allows researchers to monitor study compliance and download
-data. MoviSensXS EMA license costs vary from 500 to 10.000 euro's per year,
-depending on the required number of 'credits' which are linked to the number of
-EMA responses. Prospect users can test platform, without functional
-restrictions, with a free test account. An EMA test-study can thus be set up and
-started in less than a day. A current (November 2018) limitation of Movisens is
-the lack of an iOS version of the EMA app. Study participants who own an iPhone
-have to be excluded from studies, or will have to be provided with an Android
-phone.
+extended periods of sedentary behavior. 
 
-```{r movisens, echo = FALSE, fig.cap = "Movisens Sample scheme editor (left) and App Screenshots (right)", out.width = '80%', fig.align = 'center', fig.show = 'hold', fig.pos = "!h"}
+Specialized software to import, pre-process and analyze raw sensor data is
+available for download. Like Ilumivu, researchers can define EMA sample
+schedules for their study in a web-based back-office
+(<https://xs.movisens.com>), using an online graphical editor. Once defined,
+participants can be invited to the study , through the back-office, to download
+the freely available Movisens App from Google Play store. The back-office also
+allows researchers to monitor study compliance and download data. 
+
+MoviSensXS EMA license costs vary from 500 to 10.000 euro's per year, depending
+on the required number of 'credits' which are linked to the number of EMA
+responses. Prospect users can test platform, without functional restrictions,
+with a free test account. An EMA test-study can thus be set up and started in
+less than a day. A current (November 2018) limitation of Movisens is the lack of
+an iOS version of the EMA app. Study participants who own an iPhone have to be
+excluded from studies, or will have to be provided with an Android phone.
+
+```{r movisens, echo = FALSE, fig.cap = "Movisens Sample scheme editor (left) and App Screenshots (right)", out.width = '80%', fig.align = 'center', fig.show = 'hold', fig.pos = "!t"}
 knitr::include_graphics(c(
    "images/instruments/movisens/movisens.png"))
 ```
@@ -135,20 +143,22 @@ depression, bipolar disorder, and psychosis, with new scales currently being
 developed for a range of diseases including Parkinson's disease, pain,
 cardiology, hypertension, diabetes and Irritable Bowel Syndrome. It was also
 used in a EU-funded project to study gene-environment interaction in
-schizophrenia (<http://www.eu-gei.eu/about-the-project/psymate>). The app is
-free to download for iOS and Android devices on Apple and Google play stores.
-PsyMate is available in five languages (English, French, German, Dutch,
-Spanish). More translations are in preparation. Uses of the app include
-self-monitoring of mood states, delivering professional support during
-treatment, or conducting EMA-research. The app can be customized to address
-specific client needs or research projects, with expertise from the Psymate
-development team, which includes an active working group that meets regularly to
-discuss and advise new projects. Researchers have access to the raw data without
-having to go through the Psymate development team. Communication from the
-Psymate back office to researchers about updates and assistance with technical
-problems could be a point for consideration for using this platform.
+schizophrenia (<http://www.eu-gei.eu/about-the-project/psymate>). 
 
-```{r psymate, echo=FALSE, fig.cap = "PsyMate App Screenshots", out.width='20%', fig.align = 'center', fig.show = 'hold', fig.pos = "!h"}
+The app is free to download for iOS and Android devices on Apple and Google play
+stores. PsyMate is available in five languages (English, French, German, Dutch,
+Spanish). More translations are in preparation.
+
+Uses of the app include self-monitoring of mood states, delivering professional
+support during treatment, or conducting EMA-research. The app can be customized
+to address specific client needs or research projects, with expertise from the
+Psymate development team, which includes an active working group that meets
+regularly to discuss and advise new projects. Researchers have access to the raw
+data without having to go through the Psymate development team. Communication
+from the Psymate back office to researchers about updates and assistance with
+technical problems could be a point for consideration for using this platform.
+
+```{r psymate, echo=FALSE, fig.cap = "PsyMate App Screenshots", out.width='25%', fig.align = 'center', fig.show = 'hold', fig.pos = "!t"}
 knitr::include_graphics(c(
    "images/instruments/psymate/psymate-app1.jpg",
    "images/instruments/psymate/psymate-app3.jpg",
@@ -166,18 +176,20 @@ Department of Psychiatry, University Medical Center Groningen. RoQUA has a
 sophisticated and user-friendly online back-office portal, with which
 researchers can define assessment protocols and invite study participants -
 through e-mail or SMS - to complete questionnaires online (on desktop or mobile
-devices). By inviting study participants several times a day to complete a
+devices). 
+
+By inviting study participants several times a day to complete a
 questionnaire via the standard web browser of their mobile phone, active EMA an
 be implemented. This approach was taken in several large-scale studies,
 including 'NESDA' (<http://nesda.nl>; see also Chapter \@ref(catalogue)) and
 'HowNutsAreTheDutch' (<http://www.hoegekis.nl>; see [@VanDerKrieke2017;
 @VanDerKrieke2016]). At present, RoQua does not support the collection of
 passive EMA data. However, preliminary results have been reported with a system
-called 'Physiqual' [@Blaauw2016], with which EMA data, collected with RoQUA,
-can be automatically combined with wearable sensor data.
+called 'Physiqual' [@Blaauw2016], with which active EMA data, collected with RoQUA,
+can be combined with wearable sensor data.
 
 
-```{r roqua, echo = FALSE, fig.cap = "Screenshots of the participant feedback web-page of the 'HowNutsAreTheDutch' project, in which data is collected by the RoQua system", out.width='20%', fig.align = 'center', fig.show = 'hold', fig.pos = "!h"}
+```{r roqua, echo = FALSE, fig.cap = "Screenshots of the participant feedback web-page of the 'HowNutsAreTheDutch' project, in which data is collected by the RoQua system", out.width='25%', fig.align = 'center', fig.show = 'hold', fig.pos = "!t"}
 knitr::include_graphics(c(
    "images/instruments/roqua/roqua_p1.jpg",
    "images/instruments/roqua/roqua_p2.jpg",
